<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/teal_700"
                    android:gravity="center"
                    android:orientation="vertical">
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical">
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:id="@+id/imglogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/profile" />

            <TextView
                android:id="@+id/tvtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imglogo"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"
                android:text="@string/nama"
                android:textColor="@color/colorTextWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/tvtext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imglogo"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"
                android:text="@string/nim"
                android:textColor="@color/colorTextWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="70dp"/>
            <TextView
                android:id="@+id/tvtext2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imglogo"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:padding="5dp"
                android:text="@string/kelas"
                android:textColor="@color/colorTextWhite"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_marginTop="120dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvtext"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/form"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="120dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="8dp"
                    app:cardPreventCornerOverlap="false"
                    app:cardUseCompatPadding="true">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="20dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/jenis_kelamin"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/ttl"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/alamat"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/golongan_darah"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/makanan"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/minuman"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/hobi"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/lagu"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/film"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginBottom="20dp"
                                android:text="@string/pekerjaan"
                                android:textColor="@color/colorText"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                android:textAlignment="center"/>
                        </LinearLayout>
                    </ScrollView>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>